# local-res

backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  package.json  tsconfig.json
backend/prisma/: schema.prisma
backend/prisma/migrations/20260615131245_/: migration.sql
backend/src/: app.ts  realtime.ts
backend/src/auth/: auth.service.ts
backend/src/prisma/: client.ts  seed.ts
backend/src/routes/: admin.ts  auth.ts  menu.ts  orders.ts  realtime.ts  sync.ts
tauri/: .gitignore  package-lock.json  package.json
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/migrations/: 001_initial.sql  002_tables_checkpoint.sql
tauri/src-tauri/src/: auth_state.rs  error.rs  lib.rs  main.rs  sync_trigger.rs
tauri/src-tauri/src/commands/: auth.rs  export.rs  mod.rs  orders.rs  printer.rs  products.rs  tables.rs
tauri/src-tauri/src/db/: mod.rs  orders.rs  products.rs  tables.rs  users.rs
tauri/src-tauri/src/models/: mod.rs  order.rs  product.rs  user.rs
tauri/src-tauri/src/sync/: mod.rs
ui/: .gitignore  next.config.js  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
ui/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
ui/src/app/pos/: layout.tsx  page.tsx
ui/src/app/pos/admin/: page.tsx
ui/src/app/pos/kitchen/: page.tsx
ui/src/app/pos/menu/: page.tsx
ui/src/lib/: ipc.ts  queries.ts  realtime.ts  store.ts
